<resources>
    <string name="app_name">in-class-demo</string>
    <string name="titleBMI">Body Mass Index (BMI)</string>
    <string name="heightFeetHint">feet</string>
    <string name="weightTitle">Weight</string>
    <string name="weightUnit">lb</string>
    <string name="heightTitle">Height</string>
    <string name="weightHint">Your weight in pounds</string>
    <string name="heightFeetUnit">feet</string>
    <string name="heightInchesText">inches</string>
    <string name="calculateText">Calculate BMI</string>
    <string name="heightInchesHint">inches</string>
    <string name="resultsText">Click on Calculate BMI to find your BMI</string>
    <string name="stringName">Name</string>
    <string name="stringEmail">Email</string>
    <string name="stringIUse">I use</string>
    <string name="textAndroid">Android</string>
    <string name="textiOS">iOS</string>
    <string name="textMood">Your current mood:</string>
    <string name="buttonSubmit">Submit</string>
    <string name="textSelectAvatar">Select Your Avatar</string>
    <string name="buttonInClass03">InClass03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonInClass04">InClass04</string>
    <string name="SelectComplexity">Select Complexity:</string>
    <string name="Minimum">Minimum:</string>
    <string name="stringEmpty" />
    <string name="Maximum">Maximum:</string>
    <string name="Average">Average:</string>
    <string name="GenerateNumber">Generate Number</string>
    <string name="buttonInClass05">InClass05</string>
    <string name="hintSearch">Enter Search</string>
    <string name="textGo">Go</string>
    <string name="buttonInClass06">InClass06</string>
    <string name="buttonInClass07">InClass07</string>
    <string name="buttonInClass08">InClass08</string>
</resources>